@@ -443,6 +443,14 @@ div.lms-ui-multiselectlayer {
     }
 }
 
+@media print {
+	.no-print,
+	.no-print *
+	{
+		display: none !important;
+	}
+}
+
 .lms-ui-multi-check-all {
 	.lms-ui-no-user-select;
 }
