@@ -34,7 +34,7 @@
 	</script>
 	{block name="quicksearch"}
     	<div id="autosuggest"><ul><li></li></ul></div>
-    	<form method="post" name="quicksearch" action="?m=quicksearch" id="quicksearch">
+    	<form method="post" name="quicksearch" action="?m=quicksearch" id="quicksearch" class="no-print">
 	<table width="100%" cellpadding="0" cellspacing="0">
 		<tr>
 		    <td style="width: 1%" class="nobr">
