@@ -1,4 +1,4 @@
-<div id="pageleftbar">
+<div id="pageleftbar" class="no-print">
 	<div id="lms-ui-main-menu-toggle"></div>
 	<script type="text/javascript">
 	<!--
