@@ -1,6 +1,6 @@
 <!--// $Id$ //-->
 <hr>
-<table width="100%" cellpadding="0" cellspacing="0">
+<table width="100%" cellpadding="0" cellspacing="0" class="no-print">
 <tr>
     <td style="width: 99%" class="text-left nobr">
 	<span style="padding-right:15px;">
